--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -56,3 +56,59 @@
     }
   }
 }
+
+/* Slideshow */
+#block-views-sponsoren-block {
+  position:relative;
+  margin-top:50px;
+  .views_slideshow_cycle_main {
+    width: 80%;
+    margin: 0 auto;
+    float: none;
+  }
+  .views-row {
+    width: 20%;
+    padding-right: 2%;
+    float: left;
+    margin: 0 auto;
+  }
+  .views-slideshow-controls-text-previous {
+    display: block;
+    position: absolute;
+    top: 15%;
+    left: 0px;
+    z-index: 100;
+    background: url("img/la.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+    text-indent: -9999px;
+  }
+  .views-slideshow-controls-text-pause {
+    display:none;
+  }
+  .views-slideshow-controls-text-next {
+    display: block;
+    position: absolute;
+    top: 15%;
+    right: 0px;
+    z-index: 100;
+    text-indent: -9999px;
+    background: url("img/ra.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-previous:hover {
+    background: url("img/la-hover.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-next:hover {
+    background: url("img/ra-hover.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+}
