--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -274,6 +274,43 @@ input[type="button"]:hover,
     width: 41px;
     height: 100px; }
 
+#block-views-sponsoren-block {
+  position: relative;
+  margin: 50px 0; }
+  #block-views-sponsoren-block .views_slideshow_cycle_main {
+    width: 80%;
+    margin: 0 auto;
+    float: none; }
+  #block-views-sponsoren-block .views-row {
+    width: 31%;
+    padding-right: 2%;
+    float: left;
+    margin: 0 auto; }
+  #block-views-sponsoren-block .views-slideshow-controls-text-previous {
+    display: block;
+    position: absolute;
+    top: 0%;
+    left: 0px;
+    z-index: 100;
+    background: url("img/la.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+    text-indent: -9999px; }
+  #block-views-sponsoren-block .views-slideshow-controls-text-pause {
+    display: none; }
+  #block-views-sponsoren-block .views-slideshow-controls-text-next {
+    display: block;
+    position: absolute;
+    top: 0%;
+    right: 0px;
+    z-index: 100;
+    text-indent: -9999px;
+    background: url("img/ra.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px; }
+
 /* Banner */
 #block-bean-banner .field-name-field-quote {
   position: absolute;
@@ -337,5 +374,9 @@ input[type="button"]:hover,
       color: #000; }
     .block-superfish-2 ul li a.active {
       color: #f78b1f; }
+
+/* Home */
+.front .zone-content-wrapper {
+  background-color: #161515; }
 
 /*# sourceMappingURL=global.css.map */
