--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -113,6 +113,49 @@
   }
 }
 
+#block-views-sponsoren-block {
+  position:relative;
+  margin:50px 0;
+  .views_slideshow_cycle_main {
+    width: 80%;
+    margin: 0 auto;
+    float: none;
+  }
+  .views-row {
+    width: 31%;
+    padding-right: 2%;
+    float: left;
+    margin: 0 auto;
+  }
+  .views-slideshow-controls-text-previous {
+    display: block;
+    position: absolute;
+    top: 0%;
+    left: 0px;
+    z-index: 100;
+    background: url("img/la.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+    text-indent: -9999px;
+  }
+  .views-slideshow-controls-text-pause {
+    display:none;
+  }
+  .views-slideshow-controls-text-next {
+    display: block;
+    position: absolute;
+    top: 0%;
+    right: 0px;
+    z-index: 100;
+    text-indent: -9999px;
+    background: url("img/ra.jpg") no-repeat center;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+}
+
 /* Banner */
 #block-bean-banner {
   .field-name-field-quote {
@@ -192,3 +235,10 @@
       }
     }
   }
+
+  /* Home */
+.front {
+  .zone-content-wrapper {
+    background-color:#161515;
+  }
+}
