--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -199,6 +199,14 @@
     background-color:#161515;
     .node-front {
       width:66.6%;
+      h2 {
+        font-size:18px;
+        color:#fff;
+      }
+      body {
+        font-size:14px;
+        color:#fff;
+      }
     }
   }
 }
