--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -342,5 +342,11 @@ input[type="button"]:hover,
   background-color: #161515; }
   .front .zone-content-wrapper .node-front {
     width: 66.6%; }
+    .front .zone-content-wrapper .node-front h2 {
+      font-size: 18px;
+      color: #fff; }
+    .front .zone-content-wrapper .node-front body {
+      font-size: 14px;
+      color: #fff; }
 
 /*# sourceMappingURL=global.css.map */
