--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -207,6 +207,10 @@
         font-size:14px;
         color:#fff;
       }
+      .field-name-field-film {
+        width:374px;
+        height:255px;
+      }
     }
   }
 }
