--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -348,7 +348,7 @@ input[type="button"]:hover,
     .front .zone-content-wrapper .node-front body {
       font-size: 14px;
       color: #fff; }
-    .front .zone-content-wrapper .node-front .field-name-field-film {
+    .front .zone-content-wrapper .node-front .field-name-field-film iframe {
       width: 374px;
       height: 255px; }
 
