--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -208,8 +208,10 @@
         color:#fff;
       }
       .field-name-field-film {
-        width:374px;
-        height:255px;
+        iframe {
+          width:374px;
+          height:255px;
+        }
       }
     }
   }
