--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -203,7 +203,7 @@
         font-size:18px;
         color:#fff;
       }
-      body {
+      .field-name-body {
         font-size:14px;
         color:#fff;
       }
