--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -215,4 +215,15 @@
       }
     }
   }
+  .zone-postscript {
+    width:100%;
+  }
+  .region-postscript-first {
+    width:100%;
+    margin:0;
+    img {
+      width:100%;
+      margin:0 auto;
+    }
+  }
 }
