--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -241,3 +241,16 @@
     width:100%;
   }
 }
+
+.context-contact {
+  .zone-postscript {
+    width:100%;
+  }
+  .region-postscript-first {
+    width:100%;
+    margin:0;
+  }
+  #region-postscript-first {
+    width:100%;
+  }
+}
