--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -369,4 +369,12 @@ input[type="button"]:hover,
 .front #region-postscript-first {
   width: 100%; }
 
+.context-contact .zone-postscript {
+  width: 100%; }
+.context-contact .region-postscript-first {
+  width: 100%;
+  margin: 0; }
+.context-contact #region-postscript-first {
+  width: 100%; }
+
 /*# sourceMappingURL=global.css.map */
