--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -394,6 +394,6 @@ input[type="button"]:hover,
   width: 70%;
   float: left; }
 #block-views-agenda-block .views-row-last {
-  padding-bottom: 20px; }
+  padding: 50px; }
 
 /*# sourceMappingURL=global.css.map */
