--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -384,7 +384,8 @@ input[type="button"]:hover,
 
 /* Agenda */
 #block-views-agenda-block h2.block-title {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  padding-bottom: 50px; }
 #block-views-agenda-block .views-field-field-datum, #block-views-agenda-block .views-field-title {
   font-size: 14px; }
 #block-views-agenda-block .views-field-field-datum {
