--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -265,6 +265,7 @@
 #block-views-agenda-block {
   h2.block-title {
     text-transform:uppercase;
+    padding-bottom:50px;
   }
   .views-field-field-datum, .views-field-title {
     font-size:14px;
