--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -403,6 +403,6 @@ input[type="button"]:hover,
 
 /* Footer */
 #block-bean-logo-0 img {
-  float: right; }
+  float: left; }
 
 /*# sourceMappingURL=global.css.map */
