--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -407,5 +407,7 @@ input[type="button"]:hover,
 
 #block-bean-socialmedia {
   margin-top: 20px; }
+  #block-bean-socialmedia img {
+    padding-right: 1%; }
 
 /*# sourceMappingURL=global.css.map */
