--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -208,6 +208,7 @@
   }
   .zone-content-wrapper {
     background-color: #161515;
+    padding:50px 0;
     .block-main {
       width: 66.6%;
       float:left;
