--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -411,4 +411,16 @@ input[type="button"]:hover,
   #block-bean-socialmedia img {
     padding-right: 1%; }
 
+/* Paragraphs */
+.paragraphs-item-quote .field-name-field-quotes {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #f78b1f;
+  font-size: 55px;
+  text-align: left; }
+.paragraphs-item-quote .field-name-field-naam {
+  text-align: right; }
+.paragraphs-item-quote .field-name-field-functie {
+  text-align: right; }
+
 /*# sourceMappingURL=global.css.map */
