--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -303,3 +303,20 @@
     padding-right:1%;
   }
 }
+
+/* Paragraphs */
+.paragraphs-item-quote {
+  .field-name-field-quotes {
+    font-weight:700;
+    text-transform:uppercase;
+    color:$orange;
+    font-size:55px;
+    text-align:left;
+  }
+  .field-name-field-naam {
+    text-align:right;
+  }
+  .field-name-field-functie {
+    text-align:right;
+  }
+}
