--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -423,4 +423,10 @@ input[type="button"]:hover,
 .paragraphs-item-quote .field-name-field-functie {
   text-align: right; }
 
+.entity-paragraphs-item .field-name-field-titel {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-size: 2em; }
+
 /*# sourceMappingURL=global.css.map */
