--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -320,3 +320,12 @@
     text-align:right;
   }
 }
+
+.entity-paragraphs-item {
+  .field-name-field-titel {
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-size: 2em;
+  }
+}
