--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -7,6 +7,10 @@
 @import 'default-style';
 
 /* Algemeen */
+.zone-content-wrapper {
+  padding:50px 0;
+}
+
 #zone-menu-wrapper {
   background-color:#000;
 }
