--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -407,16 +407,17 @@ input[type="button"]:hover,
 
 .view-agenda .views-row {
   width: 33.3%;
+  margin-bottom: 50px;
   float: left; }
   .view-agenda .views-row .field-name-field-datum {
     width: 50%;
     float: left;
     color: #f78b1f;
-    text-align: right; }
+    text-align: center; }
   .view-agenda .views-row .field-name-title {
     width: 50%;
     float: left;
-    text-align: left; }
+    text-align: center; }
     .view-agenda .views-row .field-name-title h2 {
       font-size: 16px; }
 
