--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -420,6 +420,8 @@ input[type="button"]:hover,
     text-align: center; }
     .view-agenda .views-row .field-name-title h2 {
       font-size: 16px; }
+  .view-agenda .views-row .field-name-field-inhoud, .view-agenda .views-row .field-name-node-link {
+    text-align: center; }
 
 /* Footer */
 #block-bean-logo-0 img, #block-bean-socialmedia img {
