--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -313,6 +313,9 @@
         font-size:16px;
       }
     }
+    .field-name-field-inhoud, .field-name-node-link {
+      text-align:center;
+    }
   }
 }
 
