--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -316,6 +316,15 @@
     .field-name-field-inhoud, .field-name-node-link {
       text-align:center;
     }
+    .field-name-node-link {
+      background-color: #000;
+      width: 30%;
+      margin: 0 auto;
+      a {
+        color:#fff;
+        font-size:12px;
+      }
+    }
   }
 }
 
