--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -295,10 +295,16 @@
 }
 
 .view-agenda {
+  .views-row-last {
+    margin-right:0;
+  }
   .views-row {
     width:33.3%;
     margin-bottom:50px;
     float:left;
+    position:relative;
+    box-sizing:border-box;
+    margin-right:10%;
     .field-name-field-datum {
       width:50%;
       float:left;
