--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -296,7 +296,7 @@
 
 .view-agenda {
   .views-row-last {
-    margin-right:0;
+    padding-right:0;
   }
   .views-row {
     width:33.3%;
@@ -304,7 +304,7 @@
     float:left;
     position:relative;
     box-sizing:border-box;
-    margin-right:10%;
+    padding-right:10%;
     .field-name-field-datum {
       width:50%;
       float:left;
