--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -406,14 +406,14 @@ input[type="button"]:hover,
   padding: 50px 0; }
 
 .view-agenda .views-row-last {
-  margin-right: 0; }
+  padding-right: 0; }
 .view-agenda .views-row {
   width: 33.3%;
   margin-bottom: 50px;
   float: left;
   position: relative;
   box-sizing: border-box;
-  margin-right: 10%; }
+  padding-right: 10%; }
   .view-agenda .views-row .field-name-field-datum {
     width: 50%;
     float: left;
