--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -405,15 +405,13 @@ input[type="button"]:hover,
 #block-views-agenda-block .views-row-last {
   padding: 50px 0; }
 
-.view-agenda .views-row-last {
-  padding-right: 0; }
 .view-agenda .views-row {
   width: 33.3%;
   margin-bottom: 50px;
   float: left;
   position: relative;
   box-sizing: border-box;
-  padding-right: 10%; }
+  padding: 5%; }
   .view-agenda .views-row .field-name-field-datum {
     width: 50%;
     float: left;
