--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -295,16 +295,13 @@
 }
 
 .view-agenda {
-  .views-row-last {
-    padding-right:0;
-  }
   .views-row {
     width:33.3%;
     margin-bottom:50px;
     float:left;
     position:relative;
     box-sizing:border-box;
-    padding-right:10%;
+    padding:5%;
     .field-name-field-datum {
       width:50%;
       float:left;
