--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -423,12 +423,14 @@ input[type="button"]:hover,
     text-align: center; }
     .view-agenda .views-row .field-name-title h2 {
       font-size: 16px; }
-  .view-agenda .views-row .field-name-field-inhoud, .view-agenda .views-row .field-name-node-link {
-    text-align: center; }
+  .view-agenda .views-row .field-name-field-inhoud {
+    text-align: center;
+    height: 140px; }
   .view-agenda .views-row .field-name-node-link {
     background-color: #000;
     width: 30%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    text-align: center; }
     .view-agenda .views-row .field-name-node-link a {
       color: #fff;
       font-size: 12px; }
