--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -316,13 +316,15 @@
         font-size:16px;
       }
     }
-    .field-name-field-inhoud, .field-name-node-link {
+    .field-name-field-inhoud {
       text-align:center;
+      height:140px;
     }
     .field-name-node-link {
       background-color: #000;
       width: 30%;
       margin: 0 auto;
+      text-align:center;
       a {
         color:#fff;
         font-size:12px;
