--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -333,6 +333,17 @@
   }
 }
 
+.node-agenda {
+  .field-name-field-inhoud {
+    margin-top:20px;
+  }
+  .field-name-field-afbeelding3 {
+    img {
+      float:left;
+    }
+  }
+}
+
 /* Footer */
 #block-bean-logo-0, #block-bean-socialmedia {
   img {
