--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -338,6 +338,8 @@
     margin-top:20px;
   }
   .field-name-field-afbeelding3 {
+    width:100%;
+    float:left;
     img {
       float:left;
     }
@@ -350,6 +352,7 @@
     background: #000;
     border-radius: 0px;
     color: #fff;
+    margin-top:30px;
   }
 }
 
