--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -296,40 +296,42 @@
   }
 }
 
-.view-agenda {
-  .views-row {
-    width:33.3%;
-    margin-bottom:50px;
-    float:left;
-    position:relative;
-    box-sizing:border-box;
-    padding:2%;
-    .field-name-field-datum {
-      width:100%;
+.context-eventz {
+  .view-agenda {
+    .views-row {
+      width:33.3%;
+      margin-bottom:50px;
       float:left;
-      color:$orange;
-      text-align:center;
-    }
-    .field-name-title {
-      width:100%;
-      float:left;
-      text-align:center;
-      h2 {
-        font-size:16px;
+      position:relative;
+      box-sizing:border-box;
+      padding:2%;
+      .field-name-field-datum {
+        width:100%;
+        float:left;
+        color:$orange;
+        text-align:center;
       }
-    }
-    .field-name-field-inhoud {
-      text-align:center;
-      height:150px;
-    }
-    .field-name-node-link {
-      background-color: #000;
-      width: 30%;
-      margin: 0 auto;
-      text-align:center;
-      a {
-        color:#fff;
-        font-size:12px;
+      .field-name-title {
+        width:100%;
+        float:left;
+        text-align:center;
+        h2 {
+          font-size:16px;
+        }
+      }
+      .field-name-field-inhoud {
+        text-align:center;
+        height:150px;
+      }
+      .field-name-node-link {
+        background-color: #000;
+        width: 30%;
+        margin: 0 auto;
+        text-align:center;
+        a {
+          color:#fff;
+          font-size:12px;
+        }
       }
     }
   }
