--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -406,3 +406,19 @@
   }
 }
 
+/* Zinema */
+#block-views-exp-zinema-page {
+  .views-widget-filter-field_catogorie_tid {
+    width:100%;
+    .edit-field-catogorie-tid {
+      margin-right:20px;
+      float:left;
+    }
+    .form-item {
+      float:left;
+      margin-right:15px;
+      font-weight:300;
+    }
+  }
+}
+
