--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -483,7 +483,7 @@ input[type="button"]:hover,
 /* Zinema */
 #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid {
   width: 100%; }
-  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .views-exposed-form label {
+  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .label {
     margin-right: 20px;
     float: left; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item {
