--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -410,7 +410,7 @@
 #block-views-exp-zinema-page {
   .views-widget-filter-field_catogorie_tid {
     width:100%;
-    .views-exposed-form label {
+    .label {
       margin-right:20px;
       float:left;
     }
