--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -486,6 +486,8 @@ input[type="button"]:hover,
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label {
     margin-right: 20px;
     float: left; }
+  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label:after {
+    content: ":"; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item {
     float: left;
     margin-right: 15px;
