--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -414,6 +414,9 @@
       margin-right:20px;
       float:left;
     }
+    label:after {
+      content:":";
+    }
     .form-item {
       float:left;
       margin-right:15px;
