--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -483,10 +483,10 @@ input[type="button"]:hover,
 /* Zinema */
 #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid {
   width: 100%; }
-  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label {
+  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label[for=edit-field-catogorie-tid] {
     margin-right: 20px;
     float: left; }
-  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label:after {
+  #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label[for=edit-field-catogorie-tid]:after {
     content: ":"; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item {
     float: left;
