--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -485,12 +485,15 @@ input[type="button"]:hover,
   width: 100%; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label[for=edit-field-catogorie-tid] {
     margin-right: 20px;
-    float: left; }
+    float: left;
+    font-size: 16px;
+    font-weight: 500; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid label[for=edit-field-catogorie-tid]:after {
     content: ":"; }
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item {
     float: left;
     margin-right: 15px;
-    font-weight: 300; }
+    font-weight: 100;
+    font-size: 15px; }
 
 /*# sourceMappingURL=global.css.map */
