--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -413,6 +413,8 @@
     label[for=edit-field-catogorie-tid] {
       margin-right:20px;
       float:left;
+      font-size:16px;
+      font-weight:500;
     }
     label[for=edit-field-catogorie-tid]:after {
       content:":";
@@ -420,7 +422,8 @@
     .form-item {
       float:left;
       margin-right:15px;
-      font-weight:300;
+      font-weight:100;
+      font-size:15px;
     }
   }
 }
