--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -493,7 +493,7 @@ input[type="button"]:hover,
   #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item {
     float: left;
     margin-right: 15px;
-    font-weight: 100;
+    font-weight: 100 !important;
     font-size: 15px; }
 
 /*# sourceMappingURL=global.css.map */
