--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -422,7 +422,7 @@
     .form-item {
       float:left;
       margin-right:15px;
-      font-weight:100;
+      font-weight:100!important;
       font-size:15px;
     }
   }
