--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -422,8 +422,10 @@
     .form-item {
       float:left;
       margin-right:15px;
-      font-weight:100!important;
-      font-size:15px;
+      label {
+        font-size:15px;
+        fontweight:100;
+      }
     }
   }
 }
