--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -424,7 +424,7 @@
       margin-right:15px;
       label {
         font-size:15px;
-        fontweight:100;
+        font-weight:100;
       }
     }
   }
