--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -495,6 +495,6 @@ input[type="button"]:hover,
     margin-right: 15px; }
     #block-views-exp-zinema-page .views-widget-filter-field_catogorie_tid .form-item label {
       font-size: 15px;
-      fontweight: 100; }
+      font-weight: 100; }
 
 /*# sourceMappingURL=global.css.map */
