--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -434,6 +434,10 @@
   .views-row {
     width:33.3%;
     float:left;
+    iframe.media-youtube-player {
+      width:395px;
+      height:222px;
+    }
   }
 }
 
