--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -500,5 +500,8 @@ input[type="button"]:hover,
 .view-zinema .views-row {
   width: 33.3%;
   float: left; }
+  .view-zinema .views-row iframe.media-youtube-player {
+    width: 395px;
+    height: 222px; }
 
 /*# sourceMappingURL=global.css.map */
