--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -435,6 +435,7 @@
     margin-bottom:40px;
     width:33.3%;
     float:left;
+    height:255px;
     iframe.media-youtube-player {
       width:355.5px;
       height:200px;
