--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -500,7 +500,8 @@ input[type="button"]:hover,
 .view-zinema .views-row {
   margin-bottom: 40px;
   width: 33.3%;
-  float: left; }
+  float: left;
+  height: 255px; }
   .view-zinema .views-row iframe.media-youtube-player {
     width: 355.5px;
     height: 200px; }
