--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -521,4 +521,11 @@ input[type="button"]:hover,
 .pager li.pager-next a {
   width: 70px; }
 
+/* Cavak */
+.view-id-cavak .views-field-title {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 18px;
+  font-size: 30px; }
+
 /*# sourceMappingURL=global.css.map */
