--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -465,3 +465,13 @@
   }
 }
 
+
+/* Cavak */
+.view-id-cavak {
+  .views-field-title {
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 18px;
+    font-size: 30px;
+  }
+}
