--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -481,3 +481,12 @@
     float:left;
   }
 }
+
+/* Contact */
+.context-contact {
+  .zone-postscript {
+    p {
+      margin-bottom:0;
+    }
+  }
+}
