--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -531,4 +531,8 @@ input[type="button"]:hover,
 .views-field-field-crew img {
   float: left; }
 
+/* Contact */
+.context-contact .zone-postscript p {
+  margin-bottom: 0; }
+
 /*# sourceMappingURL=global.css.map */
