--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -284,7 +284,7 @@ a {
     height: 100px; }
 
 /* Banner */
-.field-name-field-quote {
+.field-name-field-quotes {
   position: absolute;
   width: 20%;
   font-size: 2.813em;
