--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -127,7 +127,7 @@ a {
 }
 
 /* Banner */
-  .field-name-field-quote {
+  .field-name-field-quotes {
     position: absolute;
     width: 20%;
     font-size: 2.813em;
