--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -138,6 +138,17 @@ a {
     font-weight:700;
   }
 
+  .field-name-field-2titel {
+    position: absolute;
+    width: 20%;
+    font-size: 2.813em;
+    color: #fff;
+    top: 10%;
+    padding-left: 10%;
+    text-shadow: 1px 1px 1px #050505;
+    font-weight:700;
+  }
+
 
 .block-news-frontpage-block {
   position: absolute;
