--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -302,7 +302,8 @@ a {
   top: 10%;
   padding-left: 10%;
   text-shadow: 1px 1px 1px #050505;
-  font-weight: 700; }
+  font-weight: 700;
+  color: #f78b1f; }
 
 .block-news-frontpage-block {
   position: absolute;
