--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -130,7 +130,7 @@ a {
   .field-name-field-quotes {
     position: absolute;
     width: 20%;
-    font-size: 2.813em;
+    font-size: 34px;
     color: #fff;
     top: 20%;
     padding-left: 10%;
