--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -287,12 +287,13 @@ a {
 .field-name-field-quotes {
   position: absolute;
   width: 20%;
-  font-size: 34px;
+  font-size: 2.813em;
   color: #fff;
   top: 20%;
   padding-left: 10%;
   text-shadow: 1px 1px 1px #050505;
-  font-weight: 700; }
+  font-weight: 700;
+  line-height: 1; }
 
 .field-name-field-2titel {
   position: absolute;
