--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -130,12 +130,13 @@ a {
   .field-name-field-quotes {
     position: absolute;
     width: 20%;
-    font-size: 34px;
+    font-size: 2.813em;
     color: #fff;
     top: 20%;
     padding-left: 10%;
     text-shadow: 1px 1px 1px #050505;
     font-weight:700;
+    line-height:1;
 
   }
 
